feat(ui): complete Swing launcher migration
Finish the XYML namespace and instance terminology migration, remove legacy compatibility paths and JavaFX runtime remnants, and restore native Swing navigation, avatars, editable path selection, backgrounds, and transparency.